syntax = "proto3";
import "google/protobuf/empty.proto";  

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc Download(DownloadRequest) returns (DownloadReply);

  rpc DownloadStream(stream DownloadRequest) returns (stream DownloadReply);

  rpc Sleep(SleepRequest) returns (google.protobuf.Empty);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message DownloadRequest {
  uint32 requestSize = 1;
}

message DownloadReply {
  bytes body = 1;
}

message SleepRequest {
	uint32 seconds = 1;
}

